reimplement TimesheetRestTest